adicionado tela de apresentação do app e comportamento de navegação inicial

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,6 @@
     <string name="editar">Editar</string>
     <string name="configurar">Configurar</string>
     <string name="perfil">Perfil</string>
+    <string name="titleApp">Pomodoro App</string>
+    <string name="title_secondary">Simplificando o seu modo de estudar com foco</string>
 </resources>
