--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,12 +9,19 @@
     <string name="title_secondary">Simplificando o seu modo de estudar com foco</string>
     <string name="cd_background_image">background image</string>
     <string name="tv_ola">Olá!</string>
+    <string name="tv_cadastro_ola">Olá!</string>
     <string name="tv_bemVindo">Bem Vindo(a)!</string>
     <string name="tv_facaLogin">Faça seu Login</string>
+    <string name="tv_crieSuaConta">Crie sua conta</string>
     <string name="tv_nome">Nome</string>
     <string name="tv_email">Email</string>
     <string name="tv_senha">Senha</string>
     <string name="tv_btn_login">LOGIN</string>
+    <string name="tv_btn_cadastrar">CADASTRAR</string>
     <string name="tv_reset_senha">Esqueçeu sua senha?</string>
     <string name="tv_cadastre_se">Não tem conta? cadastre-se</string>
+    <string name="tv_ou_entre_com">Ou entre com:</string>
+    <string name="login_com_conta_google">Login com conta google</string>
+    <string name="login_com_conta_facebook">login com conta facebook</string>
+    <string name="login_com_conta_apple">login com conta apple</string>
 </resources>
