--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -24,4 +24,6 @@
     <string name="login_com_conta_google">Login com conta google</string>
     <string name="login_com_conta_facebook">login com conta facebook</string>
     <string name="login_com_conta_apple">login com conta apple</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
