--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -26,12 +26,13 @@
     <string name="login_com_conta_apple">login com conta apple</string>
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="desconectar">DESCONECTAR</string>
-    <string name="channel_name">Canal Notificação Pomodoro</string>
+    <string name="channel_name">Notificação PomodoroApp</string>
     <string name="channel_description">Canal de notificação de pomodoros concluídos</string>
     <string name="pomodoro">Pomodoro</string>
     <string name="pausa_curta">Pausa Curta</string>
     <string name="pausa_longa">Pausa Longa</string>
-    <string name="titulo_notificacao">Pomodoro concluído</string>
-    <string name="texto_notificacao">Parabéns! Você concluiu um Pomodoro, agora faz uma pausa curta tá! :) </string>
-    <string name="texto_notificacao_pl">Parabéns! Você concluiu um ciclo,faz uma Pausa Maior agora! ;) </string>
+    <string name="titulo_notificacao">Parabéns! Timer concluído</string>
+    <string name="texto_notificacao_pc">Você concluiu um Pomodoro, faz uma pausa curta tá! :) </string>
+    <string name="texto_notificacao">Pausa Concluída! Hora de voltar para o foco! </string>
+    <string name="texto_notificacao_pl">Você concluiu um ciclo,faz uma Pausa Maior agora! ;) </string>
 </resources>
